# copy-on-write

./: .clang-format  .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  copy_on_write.hpp
.github/workflows/: ci.yml
tests/: CMakeLists.txt  allocator.cpp  assignment.cpp  comparison.cpp  composition.cpp  composition.hpp  composition_impl.cpp  construction.cpp  hash.cpp  modifiers.cpp  observers.cpp  test_allocator.cpp  test_assignment.cpp  test_comparison.cpp  test_construction.cpp  test_hash.cpp  test_modifiers.cpp  test_observers.cpp
